--- a/BabySittingCoop.Web/Web.config
+++ b/BabySittingCoop.Web/Web.config
@@ -12,6 +12,8 @@
   </appSettings>
     
   <system.web>
+      <customErrors mode="Off">
+      </customErrors>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
