move JS to separate files

--- a/BabySittingCoop.Web/BabySittingCoop.Web.csproj
+++ b/BabySittingCoop.Web/BabySittingCoop.Web.csproj
@@ -229,6 +229,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
+    <Content Include="Scripts\rankings.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -250,9 +251,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Home\Menub.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
