--- a/BabySittingCoop.Web/BabySittingCoop.Web.csproj
+++ b/BabySittingCoop.Web/BabySittingCoop.Web.csproj
@@ -230,6 +230,7 @@
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Scripts\rankings.js" />
+    <Content Include="Scripts\recommendations.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
